# mass-cfg-attr

./: Cargo.toml  LICENSE.md  README.md
mass-cfg-attr/: Cargo.toml
mass-cfg-attr-derive/: Cargo.toml
mass-cfg-attr-tests/: Cargo.toml
mass-cfg-attr-tests-tests/: Cargo.toml  README.md
mass-cfg-attr-tests-tests/src/: lib.rs
mass-cfg-attr-tests/src/: lib.rs
mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/: enum.rs  enum.stderr  function.rs  function.stderr  impl.rs  impl.stderr  impl_inner.rs  impl_inner.stderr  module.rs  module.stderr  module_inner.rs  module_inner.stderr  struct.rs  struct.stderr  struct_with_named_fields.rs  struct_with_named_fields.stderr  struct_with_tuple_fields.rs  struct_with_tuple_fields.stderr  type_definition.rs  type_definition.stderr  union.rs  union.stderr
mass-cfg-attr-tests/tests/failing_with_useful_errors/: group_extra_punctuation.rs  group_extra_punctuation.stderr  group_incorrect_punctuation.rs  group_incorrect_punctuation.stderr  group_of_groups.rs  group_of_groups.stderr  group_with_literals.rs  group_with_literals.stderr  too_few_arguments.rs  too_few_arguments.stderr  too_many_arguments.rs  too_many_arguments.stderr
mass-cfg-attr-tests/tests/passing/: enum.rs  function.rs  impl.rs  impl_inner.rs  module.rs  module_inner.rs  struct.rs  struct_with_named_fields.rs  struct_with_tuple_fields.rs  type_definition.rs  union.rs
mass-cfg-attr/src/: group_to_ident.rs  helpers.rs  inner_from_attr.rs  lib.rs  mass_cfg_attr.rs  split_mass_cfg_attr.rs
