[package]
name = "mass-cfg-attr-tests-tests"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Mason <daniel@danielmason.com>"]
description = "Confirms that mass-cfg-attr-tests are working as expected"
license = "MIT"
readme = "../README.md"
keywords = ["derive", "cfg-attr", "attribute"]
categories = ["development-tools"]
rust-version = "1.56.1"
publish = false
repository = "https://github.com/Standard-Games/mass-cfg-attr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mass-cfg-attr = { path = "../mass-cfg-attr", version = "*" }

[dev-dependencies]
trybuild = "1.0.76"
